<resources>
    <string name="app_name">Life Savers</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email">Email</string>
    <string name="reminder">REMINDER</string>
    <string name="todo">TODO</string>
    <string name="title_activity_dashboard">Dashboard</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="password">Password</string>
    <string name="mobile">Mobile</string>
    <string name="tap_here_to_view_your_profile">Tap Here To View Your Profile</string>
    <string name="name">Name</string>
    <string name="last_donation_date">Last Donation Date</string>

    <string-array name="blood_item_spinner">

        <item>A+</item>
        <item>A-</item>
        <item>B+</item>
        <item>B-</item>
        <item>AB+</item>
        <item>AB-</item>
        <item>O+</item>
        <item>O-</item>
    </string-array>

    <string name="facebook_app_id">268439754017138</string>
    <string name="fb_login_protocol_scheme">fb268439754017138</string>

</resources>
