<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignupActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bdonation"
        tools:alpha="0.85" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none"
        android:scrollbarThumbVertical="@null"
        android:scrollbarThumbHorizontal="@null"
       >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginTop="15dp">

    <android.support.v7.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:cardCornerRadius="15dp"
        app:cardBackgroundColor="#78FFFFFF">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <ImageView
                android:id="@+id/logo"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:background="@drawable/start"
                android:layout_centerHorizontal="true" />

         <android.support.design.widget.TextInputLayout
            android:id="@+id/textInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_below="@id/logo">

            <EditText
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_person_outline_black_24dp"
                android:drawablePadding="10dp"
                android:drawableTint="#FFF"
                android:hint="@string/name"
                android:inputType="textPersonName"/>

        </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.TextInputLayout
                android:id="@+id/textInputLayout1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textInputLayout"
                android:layout_margin="10dp"
                >

                <EditText
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/ic_text_format_black_24dp"
                    android:drawablePadding="10dp"
                    android:drawableTint="#FFF"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"/>

            </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.TextInputLayout
                android:id="@+id/textInputLayout2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textInputLayout1"
                android:layout_margin="10dp"
                app:passwordToggleEnabled="true">

                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password"
                    android:drawableLeft="@drawable/ic_event_black_24dp"
                    android:drawablePadding="10dp"
                    android:drawableTint="#FFF"
                    android:inputType="textPassword"/>

            </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.TextInputLayout
                android:id="@+id/textInputLayout3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_below="@+id/textInputLayout2">

                <EditText
                    android:id="@+id/mobile"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/mobile"
                    android:drawableLeft="@drawable/ic_phone_android_black_24dp"
                    android:drawablePadding="10dp"
                    android:drawableTint="#FFF"
                    android:inputType="phone"/>

            </android.support.design.widget.TextInputLayout>

            <FrameLayout
                android:id="@+id/textInputLayout4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_below="@+id/textInputLayout3">
            <!--

                <EditText
                    android:id="@+id/bloodgroup"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Blood Group"
                    android:drawableLeft="@drawable/ic_local_hospital_black_24dp"
                    android:drawablePadding="10dp"
                    android:drawableTint="#FFF"
                    android:inputType="text"/>-->

                <Spinner
                    android:id="@+id/bloodgroup_spinner"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:spinnerMode="dialog"
                    android:background="@drawable/box_shape"
                    style="@style/Base.Widget.AppCompat.ListView.DropDown"/>


                <ImageView
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:layout_gravity="end"

                    android:id="@+id/imageView_personalInfo_addImage"
                    android:src="@drawable/ic_arrow_drop_down_black_24dp"
                    android:contentDescription="TODO"/>
         </FrameLayout>


            <!---->
      <Button
            android:id="@+id/register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:background="#ed1c24"
            android:text="Register"
            android:textColor="#FFF"
            android:layout_below="@+id/textInputLayout4" />



            <TextView
                android:id="@+id/LinkToSignIn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Already Have An Account?"
                android:textColor="@color/cardview_light_background"
                android:layout_below="@+id/register"
                android:layout_alignParentEnd="true"
                android:layout_marginBottom="10dp"
                android:layout_marginEnd="10dp"
                android:textStyle="bold"
                />
        </RelativeLayout>

    </android.support.v7.widget.CardView>
        </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>